RESOLVED FIXED263569
REGRESSION (266237@main): Poster circle animation is not continuous
https://bugs.webkit.org/show_bug.cgi?id=263569
Summary REGRESSION (266237@main): Poster circle animation is not continuous
Matt Woodrow
Reported 2023-10-23 16:50:24 PDT
<rdar://117209302> https://webkit.org/blog-files/3d-transforms/poster-circle.html is no longer animating correctly on macOS. Both the animation of the entire set of rings, and the animations of each ring change direction every once in a while.
Attachments
Matt Woodrow
Comment 1 2023-10-23 16:53:57 PDT
EWS
Comment 2 2023-11-06 15:30:27 PST
Committed 270294@main (84aabd280f9a): <https://commits.webkit.org/270294@main> Reviewed commits have been landed. Closing PR #19462 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.